<resources>
    <string name="app_name">phone_book</string>
    <string name="add_button">Добавить</string>
    <string name="update_button">Обновить</string>
    <string name="info_button">Инфо</string>
    <string name="find_button">Найти</string>
    <string name="clear_button_description">Очистить</string>
    <string name="text_view_name">Имя</string>
    <string name="text_view_device_model_info_label">Устройство:</string>
    <string name="text_view_device_brand_info_label">Бренд:</string>
    <string name="text_view_os_version_info_label">Версия ОС:</string>
    <string name="button_back">Назад</string>
    <string name="text_view_phone">Номер</string>
    <string name="button_save">Сохранить</string>

</resources>