<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".AddContactActivity">

    <Button
        android:id="@+id/button_add_window_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/button_back" />

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="text"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="30dp"
        android:layout_below="@id/button_add_window_back"
        android:hint="@string/text_view_name"
        />

    <EditText
        android:id="@+id/edit_text_phone"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/edit_text_name"
        android:hint="@string/text_view_phone"
        android:layout_margin="20dp"
        android:inputType="phone"
        />
    <Button
        android:id="@+id/button_save_contact"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/edit_text_phone"
        android:layout_marginHorizontal="90dp"
        android:layout_marginTop="20dp"
        android:text="@string/button_save"
        />
</RelativeLayout>